<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OptionsActivity" >

    <Spinner
        android:id="@+id/bedrooms_opt"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <RadioGroup
        android:id="@+id/search_opt_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/entire_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:text="@string/entire_post"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/title_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_only" 
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/pay_opt_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search_opt_group"
        android:layout_below="@+id/search_opt_group"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/pay_opt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_opt" 
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/no_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_pay" 
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/all_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_pay" 
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <CheckBox
        android:id="@+id/has_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/max_ask"
        android:layout_below="@+id/max_ask"
        android:text="@string/has_image" 
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/cats_opt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/has_image"
        android:layout_below="@+id/has_image"
        android:text="@string/cats_opt"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/dogs_opt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cats_opt"
        android:layout_below="@+id/cats_opt"
        android:text="@string/dogs_opt"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/telecommute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dogs_opt"
        android:layout_below="@+id/dogs_opt"
        android:text="@string/telecommute" 
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/contract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pay_opt_group"
        android:layout_below="@+id/pay_opt_group"
        android:text="@string/contract"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/internship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contract"
        android:layout_below="@+id/contract"
        android:text="@string/internship"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/part_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/internship"
        android:layout_below="@+id/internship"
        android:text="@string/part_time"
        android:onClick="onCheckboxClicked" />

    <CheckBox
        android:id="@+id/non_profit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/part_time"
        android:layout_below="@+id/part_time"
        android:text="@string/non_profit"
        android:onClick="onCheckboxClicked" />

    <EditText
        android:id="@+id/min_ask"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bedrooms_opt"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/min_ask"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/max_ask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/min_ask"
        android:layout_below="@+id/min_ask"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/max_ask"
        android:inputType="number" />

</RelativeLayout>